# seg_with_count

./: CMakeLists.txt
src/: CMakeLists.txt  seg.cpp
